--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -2,3 +2,9 @@
 @source '../**/*.{js,ts,jsx,tsx}';
 
 @import 'tw-animate-css';
+
+@layer base {
+  * {
+    font-family: 'Montserrat Alternates', sans-serif;
+  }
+}
